--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
 httpx = "^0.27.2"
 python-multipart = "^0.0.17"
+aiofiles = "^24.1.0"
 
 
 [build-system]
