--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pytest-asyncio = "^0.24.0"
 httpx = "^0.27.2"
 python-multipart = "^0.0.17"
 aiofiles = "^24.1.0"
+isort = "^5.13.2"
+mypy = "^1.13.0"
 
 
 [build-system]
