--- a/alembic.ini
+++ b/alembic.ini
@@ -59,7 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5432/microblogs
+sqlalchemy.url = postgresql+asyncpg://user:password@pg:5432/microblogs
 
 
 [post_write_hooks]
