--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,12 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U user -d microblogs" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
   adminer:
     image: adminer
     ports:
@@ -28,41 +34,44 @@ services:
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     ports:
       - "5050:80"
-#  app:
-#    image: python:3.12
-#    container_name: microblog_app
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    volumes:
-#      - .:/app
-#      - static_volume:/app/static
-#      - media_volume:/app/media
-#    ports:
-#      - "8000:8000"
-#    environment:
-#      - DATABASE_URL=postgresql://user:password@pg:5432/microblogs
-#    networks:
-#      - app-network
-#    depends_on:
-#      - pg
-#
-#  nginx:
-#    container_name: "nginx"
-#    image: nginx:latest
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - ./nginx.conf:/etc/nginx/nginx.conf
-#    depends_on:
-#      - app
-#    networks:
-#      - app-network
+  app:
+    image: python:3.12
+    container_name: microblog_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./app:/microblog/app
+      - static_volume:/microblog/static
+      - media_volume:/microblog/media
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql+asyncpg://user:password@pg:5432/microblogs
+    networks:
+      - app-network
+    depends_on:
+      pg:
+        condition: service_healthy
+
+  nginx:
+    container_name: "nginx"
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - static_volume:/microblog/static
+    ports:
+      - "80:80"
+    networks:
+      - app-network
+    depends_on:
+      - app
 networks:
   app-network:
     driver: bridge
 
 volumes:
   pgdata:
-#  static_volume:
-#  media_volume:
+  static_volume:
+  media_volume:
+
