--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://app:5000;
+            proxy_pass http://app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +32,7 @@ http {
         }
 
         location /static/ {
-            alias /app/static/;
+            alias /microblog/static/;
         }
     }
 }
